# WeMakeDevs-Vision-Possible-Hackathon

./: .dockerignore  .gitignore  Architecture.md  Personal.gitignore  README.md
.github/workflows/: deploy-pages.yml
Plans/: DayWise Plan.md
backend/: .env.example  README.md  m5_bridge.py  main.py  providers.py  pyproject.toml  requirements.txt  spatial_memory.db  spatial_memory.db-shm  spatial_memory.db-wal  test_imports.py
backend/mcp_tools/: __init__.py  maps_api.py  navigation_engine.py  smart_tools.py  spatial_memory.py
backend/processors/: __init__.py  guidelens_processor.py  mediapipe_hands.py  ocr_processor.py  signbridge_processor.py
backend/tests/: __init__.py  test_backend.py  test_day4.py  test_day5.py
backend/utils/: __init__.py  local_storage.py
deploy/: .dockerignore  Dockerfile  README.md  build-and-push.sh  docker-compose.yml  github-pages.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/__tests__/: frontend.test.tsx
frontend/src/components/: AlertOverlay.tsx  ChatLog.tsx  NavigationStatus.tsx  OCROverlay.tsx  ProviderSelector.tsx  StatusBar.tsx  TelemetryPanel.tsx  Toast.tsx  VideoRoom.tsx
frontend/src/types/: index.ts
m5stack_camera/: README.md
m5stack_camera/camera/: boot.py  config.py  main.py
m5stack_camera/camera_host/: bridge.py  requirements.txt
m5stack_camera/models/: README.md
testing/: conftest.py  test_backend.py  test_day2.py  test_day4.py  test_day5.py  test_imports.py
(+5 files in other folders)
